# alphaos

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  alembic.ini  pyproject.toml  requirements.txt
.github/workflows/: build-image.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_v2frontier.py  0003_holdings_costbasis_fx.py  0004_holding_acquired_at.py  0005_transactions_ledger.py  0006_cash_flows.py  0007_nav_cost_basis.py  0008_price_source_yfinance.py  0009_portfolio_tag_and_delever_floor.py  0010_fx_history_sleeve_history_drop_reserve_cagr.py
alphaos/: __init__.py  backtest.py  cli.py  data.py  jobs.py  levels.py  minio.py  paper.py  placebo.py  portfolio.py  research.py  server.py  setups.py
alphaos/db/: __init__.py  allocation.py  archive.py  cash_flows.py  config.py  engine.py  fx.py  history.py  importer.py  ledger.py  models.py  nav.py  pricing.py  reconcile.py  serialize.py  transactions.py
alphaos/tests/: test_history.py  test_importer.py  test_journal.py  test_ledger.py  test_nav.py  test_nav_derive.py  test_pnl_gate.py  test_pricing_fx.py  test_reconcile.py  test_setups.py  test_transactions.py  test_v060_features.py
alphaos/web/: accounts.html  allocation.html  archive.html  config.html  holdings.html  index.html  inspiration.html  ledger.html  nav.html  paper.html  strategies.html  transactions.html
alphaos/web/static/css/: style.css
alphaos/web/static/js/: accounts.js  allocation.js  archive.js  common.js  config.js  holdings.js  inspiration.js  ledger.js  nav.js  overview.js  paper.js  strategies.js  transactions.js
marketdata/: __init__.py  build_bars.py  dagster_defs.py  ingest_massive.py  minio_io.py
