[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alphaos"
version = "0.2.0"
description = "V2-FRONTIER portfolio tracker: leveraged multi-sleeve allocation, NAV-index/TWR ledger, and de-lever risk dashboard."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AlphaOS" }]
keywords = ["trading", "portfolio", "allocation", "leverage", "risk", "nav", "twr"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1",
  "alembic>=1.13",
  "boto3>=1.34",          # MinIO stocks-us daily closes (US-stock pricing)
  "pandas>=2.1",          # read MinIO parquet
  "pyarrow>=15",          # parquet engine for pandas
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
alphaos = "alphaos.cli:main"

[project.urls]
Documentation = "file://README.md"

[tool.setuptools]
packages = ["alphaos", "alphaos.db", "alphaos.tests"]
include-package-data = true

[tool.setuptools.package-data]
alphaos = [
  "web/*.html",
  "web/static/css/*.css",
  "web/static/js/*.js",
]
